# CTkTableRowSelector

./: .gitignore  LICENCE  README.md  pyproject.toml
CTkTableRowSelector/: __init__.py  __main__.py
tests/: conftest.py  test_mock_gui_calls.py  test_objects_validity.py  test_simple_selection.py
