[tool.poetry]
name = "CTkTableRowSelector"
version = "1.0.0"
description = "Wrapper class around CTkTable to let users select rows"
authors = ["CallMePixelMan"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "CTkTableRowSelector" }
]

[tool.poetry.dependencies]
python = "^3.11"
ctktable = "^0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = "--cov=CTkTableRowSelector --cov-report term-missing"
filterwarnings = [
    # raised from customtkinter trying to compare darkdetect Version
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
omit=[
    "__main__.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
